--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,6 @@
     "[python]": {
         "editor.defaultFormatter": "ms-python.black-formatter"
     },
-    "python.formatting.provider": "black"
+    "python.formatting.provider": "none",
+    "workbench.colorTheme": "Visual Studio 2017 Dark - C++"
 }
