--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,8 @@
 {
+    "makefile.extensionOutputFolder": "./.vscode",
+    "workbench.colorTheme": "Visual Studio 2017 Dark - C++",
     "[python]": {
         "editor.defaultFormatter": "ms-python.black-formatter"
     },
-    "python.formatting.provider": "none",
-    "workbench.colorTheme": "Visual Studio 2017 Dark - C++"
+    "python.formatting.provider": "none"
 }
