--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
 pdbpp==0.10.3
-requests==2.27.1
 
 fastapi==0.95.1
 fastapi-pagination==0.12.2
@@ -7,10 +6,8 @@ gunicorn==20.0.4
 uvicorn==0.22.0
 orjson==3.5.0
 pytz==2020.1
-aiofiles==0.6.0
 
 # Request
-aiohttp==3.6.2
 requests
 
 # Autenticacion
@@ -18,11 +15,8 @@ pyjwt==1.7.1  # https://pyjwt.readthedocs.io/
 
 # DB
 psycopg2-binary==2.9.6  # https://github.com/psycopg/psycopg2
-aiopg==1.0.0  # https://aiopg.readthedocs.io/en/stable/
 sqlalchemy==2.0.12 # https://www.sqlalchemy.org/
 
-# Redis
-aioredis==1.3.1
 
 # Linter
 flake8==3.8.3
@@ -37,6 +31,7 @@ XlsxWriter==3.1.0
 alembic==1.11.1
 
 python-multipart
+celery==4.4.7
 
-
-
+tenacity==8.2.3
+redis==5.0.1
