--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,16 +19,18 @@ services:
       - ./.env
     environment:
       - DEBUG=True
-    ports:
-      - "8203:8000"
+    ports: 
+      - 8000:8000    
     depends_on:
       - db
-    command: uvicorn app.web_server:app --reload --host 0.0.0.0 --log-level debug
+      - redis
+    command: uvicorn app.web_server:app --reload --host 0.0.0.0 --port 8000 --log-level debug
+    networks:
+      - cluster-one-web_cluster_one_network
+      - default
 
   redis:
     image: redis:5.0
-    ports:
-      - "6379:6379"
 
   db:
     build:
@@ -40,8 +42,6 @@ services:
       - local_postgres_data_backups:/backups
     env_file:
       - ./.env
-    ports:
-      - "5432:5432"
 
   celeryworker:
     platform: "linux/amd64"
@@ -70,14 +70,8 @@ services:
       context: .
       dockerfile: ./compose/web-server/Dockerfile
     command: [ "./start-celerybeat" ]
-  # flower:
-  #   platform: "linux/amd64"
-  #   image: api-cluster-one-web_flower
-  #   ports:
-  #     - "5555:5555"
-  #   env_file:
-  #     - .env
-  #   build:
-  #     context: .
-  #     dockerfile: ./compose/web-server/Dockerfile
-  #   command: [ "./start-flower" ]
+
+
+networks:
+  cluster-one-web_cluster_one_network:
+    external: true
